modifica index.html desde modifica-html-20250515

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header>
     <h1>Bienvenido a Mi Web</h1>
+	<h2>Este cambio ha sido hecho en la rama modifica-html.20250515</h2>
   </header>
   <main>
     <p>Esta es una página sencilla para practicar Git y GitHub.</p>
